--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                         </div>
                     </div>
                     <div class="flex items-center gap-3">
-                        <input 
+                        <input disabled ... placeholder="HF key stored securely server-side" />
                             type="password" 
                             id="hfApiKey" 
                             placeholder="HF API Key (optional)" 
