--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Solana Memecoin Analyzer</title>
+  <title>MemeIQ</title>
 
   <!-- Tailwind (CDN is fine for demo; for prod you’d compile) -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -31,7 +31,7 @@
             <i data-lucide="scan-search" class="w-6 h-6 text-white"></i>
           </div>
           <div>
-            <h1 class="text-xl font-bold gradient-text">Solana Memecoin Analyzer</h1>
+            <h1 class="text-xl font-bold gradient-text">MemeIQ</h1>
             <p class="text-xs text-gray-400">Contract Intelligence & Risk Assessment</p>
           </div>
         </div>
