--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
         </div>
       </div>
 
+      <div class="telegram-cta">
+  📱 Use MemeIQ on Telegram! 
+  Analyze tokens without opening browser.
+  👉 @memeiq_analysis_bot
+</div>
+
       <!-- Key Metrics -->
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
         <!-- Price -->
